Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1044 of 1045 messages translated (1 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jun 29 15:20:09 2011\n"
-"PO-Revision-Date: 2011-05-16 19:33+0300\n"
-"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
+"PO-Revision-Date: 2011-06-29 15:42+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -35,48 +35,40 @@ msgstr "workspace"
 
 #: src/bungeni.main/bungeni/core/app.py:116
 #: src/bungeni.main/bungeni/core/app.py:117
-#, fuzzy
 msgid "documents"
 msgstr "documents"
 
 #: src/bungeni.main/bungeni/core/app.py:124
-#, fuzzy
 msgid "draft"
-msgstr "redraft agenda"
+msgstr "draft"
 
 #: src/bungeni.main/bungeni/core/app.py:125
-#, fuzzy
 msgid "draft documents"
-msgstr "tabled documents"
+msgstr "draft documents"
 
 #: src/bungeni.main/bungeni/core/app.py:129
 msgid "inbox"
-msgstr ""
+msgstr "inbox"
 
 #: src/bungeni.main/bungeni/core/app.py:130
-#, fuzzy
 msgid "incoming documents"
-msgstr "back to document"
+msgstr "incoming documents"
 
 #: src/bungeni.main/bungeni/core/app.py:134
-#, fuzzy
 msgid "sent"
-msgstr "consent"
+msgstr "sent"
 
 #: src/bungeni.main/bungeni/core/app.py:135
-#, fuzzy
 msgid "sent documents"
-msgstr "tabled documents"
+msgstr "sent documents"
 
 #: src/bungeni.main/bungeni/core/app.py:139
-#, fuzzy
 msgid "archive"
 msgstr "archive"
 
 #: src/bungeni.main/bungeni/core/app.py:140
-#, fuzzy
 msgid "archived documents"
-msgstr "tabled documents"
+msgstr "archived documents"
 
 #: src/bungeni.main/bungeni/core/app.py:143
 #: src/bungeni.main/bungeni/core/app.py:144
@@ -504,7 +496,6 @@ msgstr "withdraw"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:406
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:417
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:418
-#, fuzzy
 msgid "Publish Internal"
 msgstr "publish internal"
 
@@ -514,9 +505,8 @@ msgstr "publish internal"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:408
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:419
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:420
-#, fuzzy
 msgid "Publish to Public"
-msgstr "publish internal"
+msgstr "publish to public"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:133
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:266
@@ -854,9 +844,8 @@ msgstr "send to ministry"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:313
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:355
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:375
-#, fuzzy
 msgid "Redraft"
-msgstr "redraft agenda"
+msgstr "redraft"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:521
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:130
@@ -984,7 +973,6 @@ msgid "reject"
 msgstr "reject"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:667
-#, fuzzy
 msgid "withdraw"
 msgstr "withdraw"
 
@@ -1000,14 +988,12 @@ msgid "Complete"
 msgstr "submit to house business"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:670
-#, fuzzy
 msgid "withdrawauto"
 msgstr "withdraw"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:673
-#, fuzzy
 msgid "unsignauto"
-msgstr "signatory"
+msgstr "unsign"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:70
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:246
@@ -1121,7 +1107,6 @@ msgid "Schedule"
 msgstr "schedule"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:10
-#, fuzzy
 msgid "Submitted to Clerk"
 msgstr "submitted to clerk"
 
@@ -1344,7 +1329,6 @@ msgid "Private"
 msgstr "private"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:26
-#, fuzzy
 msgid "received by clerk"
 msgstr "received by clerk"
 
@@ -1430,23 +1414,20 @@ msgid "Inactive file obsolete"
 msgstr "inactive file obsolete"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:403
-#, fuzzy
 msgid "Published Internal"
-msgstr "publish internal"
+msgstr "published internal"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:413
 msgid "Inactive event"
 msgstr "inactive event"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:414
-#, fuzzy
 msgid "Published internal"
-msgstr "publish internal"
+msgstr "published internal"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:415
-#, fuzzy
 msgid "Public event"
-msgstr "public"
+msgstr "public event"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:425
 msgid "Published"
@@ -1646,24 +1627,20 @@ msgid "Maximum consented signatories for a motion"
 msgstr "maximum consented signatories for a motion"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:305
-#, fuzzy
 msgid "Minimum consented signatories for an agenda item"
-msgstr "minimum consented signatories for a bill"
+msgstr "minimum consented signatories for an agenda item"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:308
-#, fuzzy
 msgid "Maximum consented signatories for an agenda item"
-msgstr "maximum consented signatories for a bill"
+msgstr "maximum consented signatories for an agenda item"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:311
-#, fuzzy
 msgid "Minimum consented signatories for a tabled document"
-msgstr "minimum consented signatories for a motion"
+msgstr "minimum consented signatories for a tabled document"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:315
-#, fuzzy
 msgid "Maximum consented signatories for a tabled document"
-msgstr "maximum consented signatories for a motion"
+msgstr "maximum consented signatories for a tabled document"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:323
 msgid "Email Notifications Enabled?"
@@ -2078,9 +2055,8 @@ msgid "Edit Signatory"
 msgstr "edit signatory"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:257
-#, fuzzy
 msgid "View Signatory"
-msgstr "edit signatory"
+msgstr "view signatory"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:26
 msgid "Delete an item from a schedule"
@@ -2332,19 +2308,16 @@ msgid "Document Signatory"
 msgstr "document signatory"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:22
-#, fuzzy
 msgid "Party Member"
 msgstr "party member"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:23
-#, fuzzy
 msgid "Member of Government"
-msgstr "member of parliament"
+msgstr "member of government"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:24
-#, fuzzy
 msgid "Committee Member"
-msgstr "add committee member..."
+msgstr "committee member"
 
 #: src/bungeni.main/bungeni/ui/attendance.py:142
 #: src/bungeni.main/bungeni/ui/forms/common.py:360
@@ -2499,18 +2472,16 @@ msgid "Actions"
 msgstr "actions"
 
 #: src/bungeni.main/bungeni/ui/constraints.py:23
-#, fuzzy
 msgid "Invalid value"
-msgstr "invalid date: $value"
+msgstr "invalid value"
 
 #: src/bungeni.main/bungeni/ui/constraints.py:44
 msgid "This is not a valid email address"
-msgstr ""
+msgstr "this is not a valid email address"
 
 #: src/bungeni.main/bungeni/ui/constraints.py:45
-#, fuzzy
 msgid "Invalid login name"
-msgstr "email server login name"
+msgstr "invalid login name"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1067
 msgid "Group"
@@ -2839,7 +2810,6 @@ msgstr "office members"
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:177
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:178
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3033
-#, fuzzy
 msgid "view"
 msgstr "view"
 
@@ -2884,14 +2854,12 @@ msgid "Due Date"
 msgstr "due date"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1930
-#, fuzzy
 msgid "Assigned item"
-msgstr "add committee..."
+msgstr "assigned item"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1931
-#, fuzzy
 msgid "Assigned items"
-msgstr "assigned bills"
+msgstr "assigned items"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1938
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1945
@@ -3283,14 +3251,12 @@ msgid "View"
 msgstr "view"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3033
-#, fuzzy
 msgid "review"
-msgstr "preview"
+msgstr "review"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3056
-#, fuzzy
 msgid "no party"
-msgstr "add party"
+msgstr "no party"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3064
 msgid "Signature status"
@@ -3534,6 +3500,8 @@ msgid ""
 "Must contain only letters, numbers, a period(.) and underscore (_). Should "
 "start with a letter and be between 3 and 20 characters long"
 msgstr ""
+"must contain only letters, numbers, a period(.) and underscore (_). should "
+"start with a letter and be between 3 and 20 characters long"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:609
 msgid "Initial password"
@@ -3692,20 +3660,19 @@ msgstr "members"
 
 #: src/bungeni.main/bungeni/ui/errors.py:21
 msgid "An error occurred in Bungeni."
-msgstr ""
+msgstr "an error occured in bungeni"
 
 #: src/bungeni.main/bungeni/ui/errors.py:25
-#, fuzzy
 msgid "Bungeni - [Error]"
-msgstr "bungeni visitor"
+msgstr "bungeni - [error]"
 
 #: src/bungeni.main/bungeni/ui/errors.py:40
 msgid "A system error occurred."
-msgstr ""
+msgstr "a system error occurred."
 
 #: src/bungeni.main/bungeni/ui/errors.py:53
 msgid "Your account is not authorized to view this item."
-msgstr ""
+msgstr "your account is not authorized to view this item"
 
 #: src/bungeni.main/bungeni/ui/fields.py:20
 msgid "Choose items from provided vocabulary"
@@ -4381,9 +4348,8 @@ msgid "Add Agenda item..."
 msgstr "add agenda item..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:239
-#, fuzzy
 msgid "Assign an item..."
-msgstr "assign a bill..."
+msgstr "assign an item..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:247
 #: src/bungeni.main/bungeni/ui/menu.zcml:299
@@ -4474,9 +4440,8 @@ msgid "Add file..."
 msgstr "add file..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:450
-#, fuzzy
 msgid "Assign motion to a group..."
-msgstr "assign bill to committee..."
+msgstr "assign motion to group"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:458
 msgid "The 'Add...' menu - for bill"
@@ -4494,9 +4459,8 @@ msgid "Add event..."
 msgstr "add event..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:528
-#, fuzzy
 msgid "Assign bill to a committee..."
-msgstr "assign bill to committee..."
+msgstr "assign bill to a committee..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:537
 #: src/bungeni.main/bungeni/ui/menu.zcml:545
@@ -4534,9 +4498,8 @@ msgid "Actions for Scheduling Discussions"
 msgstr "actions for scheduling discussions"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:590
-#, fuzzy
 msgid "Assign question to a group..."
-msgstr "assign bill to committee..."
+msgstr "assign question to a group..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:60
 msgid "Actions for Calendar Schedulings"
@@ -4552,18 +4515,16 @@ msgstr ""
 "the \"workflow\" menu - allows the user to execute workflow transitions"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:647
-#, fuzzy
 msgid "Assign this document to a group..."
-msgstr "assign bill to committee..."
+msgstr "assign this document to a group..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:664
 msgid "The 'Add...' menu - for agenda item"
 msgstr "the \"add...\" menu - for agenda item"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:685
-#, fuzzy
 msgid "Assign agenda item to a group..."
-msgstr "assign bill to committee..."
+msgstr "assign agenda item to a group..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:694
 msgid "The 'Add...' menu - for offices"
@@ -5229,12 +5190,10 @@ msgid "Workflow history"
 msgstr "workflow history"
 
 #: src/bungeni.main/bungeni/ui/workspace.py:30
-#, fuzzy
 msgid "item type"
-msgstr "title types"
+msgstr "item type"
 
 #: src/bungeni.main/bungeni/ui/workspace.py:32
-#, fuzzy
 msgid "status date"
 msgstr "status date"
 
