--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Thu Jun 30 16:10:36 2011\n"
-"PO-Revision-Date: 2011-06-29 15:42+0300\n"
+"PO-Revision-Date: 2011-06-30 16:19+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -3931,7 +3931,7 @@ msgstr "subscribe"
 
 #: src/bungeni.main/bungeni/ui/forms/templates/written_question_response.pt:9
 msgid "Written response to question by ${respondent}"
-msgstr ""
+msgstr "written response to question by ${respondent}"
 
 #: src/bungeni.main/bungeni/ui/forms/validations.py:128
 #: src/bungeni.main/bungeni/ui/forms/validations.py:139
