Commit from Bungeni: Pootle Localisation Portal by user murithi.: 518 of 1047 messages translated (429 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/sw/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/sw/LC_MESSAGES/bungeni.po
@@ -3,19 +3,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Thu Jun 30 16:10:36 2011\n"
-"PO-Revision-Date: 2010-06-04 14:08+0300\n"
-"Last-Translator: UN/DESA <undesa@apkn.org>\n"
+"PO-Revision-Date: 2011-06-30 16:21+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: sw\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.4\n"
 "Domain: DOMAIN\n"
-"Language: sw\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"X-Generator: Pootle 2.0.3\n"
 
 #: src/bungeni.main/bungeni/core/app.py:102
 #, fuzzy
@@ -4278,7 +4278,7 @@ msgstr ""
 
 #: src/bungeni.main/bungeni/ui/forms/templates/written_question_response.pt:9
 msgid "Written response to question by ${respondent}"
-msgstr ""
+msgstr "jibu lililoandikwa na ${respondent}"
 
 #: src/bungeni.main/bungeni/ui/forms/validations.py:128
 #: src/bungeni.main/bungeni/ui/forms/validations.py:139
