Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1050 of 1051 messages translated (1 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Jul 12 12:14:05 2011\n"
-"PO-Revision-Date: 2011-07-12 12:40+0300\n"
+"PO-Revision-Date: 2011-07-12 13:22+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -5198,7 +5198,7 @@ msgstr "notice date"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:193
 msgid "Active Date is in the past."
-msgstr "active Date is in the past."
+msgstr "active date is in the past."
 
 #: src/bungeni.main/bungeni/ui/workflow.py:196
 msgid "Active Date is in the future."
